# backend/src/features/roi/model/interface/IRoiUseCase.go
@@ -14,6 +14,14 @@ type ITestStatsRoiUseCase interface {
 	GetTestStats(ctx context.Context, projectID string, folderPath string) (response.ResTestStatsRoi, error)
 }
 
-type IDraftRoiUseCase interface {
+type ICreateDraftRoiUseCase interface {
 	CreateDraftRoi(ctx context.Context, projectID string, originFile string) error
+}
+
+type IGetDraftRoiUseCase interface {
+	GetDraftRoi(ctx context.Context, projectID string, roiFileName string) (response.ResDraftRoi, error)
+}
+
+type ISaveDraftRoiUseCase interface {
+	SaveDraftRoi(ctx context.Context, projectID string, roiFileName string) (response.ResSaveDraft, error)
 }
